# taps

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md
.github/workflows/: docker-publish.yml
google-tap/: Cargo.toml
google-tap/src/: gtts.rs  main.rs
papago-tap/: Cargo.toml
papago-tap/src/: main.rs  papago.rs
supertonic-tap/: Cargo.toml
supertonic-tap/src/tts/: assets.rs  engine.rs  pool.rs  text.rs
wedding-tap/: Cargo.toml
wedding-tap/src/: main.rs
youtube-tap/: Cargo.toml
youtube-tap/src/: main.rs  ytdl.rs
