[package]
name = "papago-tap"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dotenvy = { workspace = true }
hmac = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
zako3-types = { workspace = true }
zako3-tap-sdk = { workspace = true }
