[package]
name = "youtube-tap"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dotenvy = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
yt-dlp = { workspace = true }
zako3-tap-sdk = { workspace = true }
